# Bearpi_Nano_Motion_Detection

./: .gitignore  BUILD.gn
Data_Sample/: main.py  socket_test.py
Data_Sample/Circle/: Circle_0.txt  Circle_1.txt  Circle_10.txt  Circle_11.txt  Circle_12.txt  Circle_13.txt  Circle_14.txt  Circle_15.txt  Circle_16.txt  Circle_17.txt  Circle_18.txt  Circle_19.txt  Circle_2.txt  Circle_20.txt  Circle_21.txt  Circle_22.txt  Circle_23.txt  Circle_24.txt  Circle_25.txt  Circle_26.txt  Circle_27.txt  Circle_28.txt  Circle_29.txt  Circle_3.txt  Circle_30.txt  Circle_31.txt  Circle_32.txt  Circle_33.txt  Circle_34.txt  Circle_35.txt  Circle_36.txt  Circle_37.txt  Circle_38.txt  Circle_39.txt  Circle_4.txt  Circle_40.txt  Circle_41.txt  Circle_42.txt  Circle_43.txt  Circle_44.txt  (+10 more)
Data_Sample/Letter_L/: Letter_L_0.txt  Letter_L_1.txt  Letter_L_10.txt  Letter_L_11.txt  Letter_L_12.txt  Letter_L_13.txt  Letter_L_14.txt  Letter_L_15.txt  Letter_L_16.txt  Letter_L_17.txt  Letter_L_18.txt  Letter_L_19.txt  Letter_L_2.txt  Letter_L_20.txt  Letter_L_21.txt  Letter_L_22.txt  Letter_L_23.txt  Letter_L_24.txt  Letter_L_25.txt  Letter_L_26.txt  Letter_L_27.txt  Letter_L_28.txt  Letter_L_29.txt  Letter_L_3.txt  Letter_L_30.txt  Letter_L_31.txt  Letter_L_32.txt  Letter_L_33.txt  Letter_L_34.txt  Letter_L_35.txt  Letter_L_36.txt  Letter_L_37.txt  Letter_L_38.txt  Letter_L_39.txt  Letter_L_4.txt  Letter_L_40.txt  Letter_L_41.txt  Letter_L_42.txt  Letter_L_43.txt  Letter_L_44.txt  (+10 more)
Data_Sample/Letter_M/: Letter_M_0.txt  Letter_M_1.txt  Letter_M_10.txt  Letter_M_11.txt  Letter_M_12.txt  Letter_M_13.txt  Letter_M_14.txt  Letter_M_15.txt  Letter_M_16.txt  Letter_M_17.txt  Letter_M_18.txt  Letter_M_19.txt  Letter_M_2.txt  Letter_M_20.txt  Letter_M_21.txt  Letter_M_22.txt  Letter_M_23.txt  Letter_M_24.txt  Letter_M_25.txt  Letter_M_26.txt  Letter_M_27.txt  Letter_M_28.txt  Letter_M_29.txt  Letter_M_3.txt  Letter_M_30.txt  Letter_M_31.txt  Letter_M_32.txt  Letter_M_33.txt  Letter_M_34.txt  Letter_M_35.txt  Letter_M_36.txt  Letter_M_37.txt  Letter_M_38.txt  Letter_M_39.txt  Letter_M_4.txt  Letter_M_40.txt  Letter_M_41.txt  Letter_M_42.txt  Letter_M_43.txt  Letter_M_44.txt  (+10 more)
Data_Sample/Letter_R/: Letter_R_0.txt  Letter_R_1.txt  Letter_R_10.txt  (+47 more)
Hi3861/: BUILD.gn  main.c
Hi3861/inc/: Button.h  E53_SC2.h  mnist_test.h  mqtt_cloud.h  nnom_port.h  weights_rnn.h  wifi_connect.h
Hi3861/src/: Button.c  E53_SC2.c  mnist_test.c  mqtt_cloud.c
Motion_classification/: .layer_q_list  convert_nnom.ipynb  main.ipynb  main.py
(+264 files in other folders)
